# graph_delineator

./: .gitignore  README.md  delineate.ipynb  demo.ipynb  pyproject.toml  testing.ipynb  watershed_delineation_example.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml  watershed_delineation_example-checkpoint.ipynb
demo/: demo.csv
demo/demo/gauges/: USGS-01578310_gauges.parquet
demo/demo/subbasins/: USGS-01578310_subbasins.parquet
inputs/: manual_matchups.csv  test.csv
src/graph_delineator/: __init__.py  dataclasses.py  delineate.py  merit_util.py  split_catchment.py
